--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/data
+/tests/data
+
 # Created by https://www.toptal.com/developers/gitignore/api/flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
 
