Move src/ dir to src/rui-be/

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,15 @@ name = rui-be
 version = 0.8.0
 
 [options]
+packages = find_namespace:
+package_dir =
+    =src
 install_requires =
     Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@e42479f445fe2b4217a6b3d54421d8147cfe9735#egg=Draug
     Flask~=2.0.1
+
+[options.packages.find]
+where = src
 
 [options.extras_require]
 dev = pytest
