--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ packages = find_namespace:
 package_dir =
     =src
 install_requires =
-    Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@e42479f445fe2b4217a6b3d54421d8147cfe9735#egg=Draug
+    Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@35e0dc23a07c25a59919ccb2520a2c3fcbd8a646
     Flask~=2.0.1
 
 [options.packages.find]
@@ -15,3 +15,7 @@ where = src
 
 [options.extras_require]
 dev = pytest
+
+[options.entry_points]
+console_scripts =
+    rui-be = src.rui_be.app:main
