Flatten package hierarchy by removing /src/ layer

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,15 +3,17 @@ name = rui-be
 version = 0.8.0
 
 [options]
-packages = find_namespace:
-package_dir =
-    =src
+packages =
+    rui_be
+    rui_be.models
+    rui_be.models.entity
+    rui_be.models.match
+    rui_be.models.node
+    rui_be.models.prediction
+    rui_be.routes
 install_requires =
     Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@35e0dc23a07c25a59919ccb2520a2c3fcbd8a646
     Flask~=2.0.1
-
-[options.packages.find]
-where = src
 
 [options.extras_require]
 dev = pytest
