--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = rui-be
-version = 0.8.0
+version = 0.9.0
 
 [options]
 packages =
@@ -16,7 +16,9 @@ install_requires =
     Flask~=2.0.1
 
 [options.extras_require]
-dev = pytest
+dev =
+    black
+    pytest
 
 [options.entry_points]
 console_scripts =
