--- a/setup.cfg
+++ b/setup.cfg
@@ -13,13 +13,18 @@ packages =
     rui_be.routes
 install_requires =
     Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@7736e20e225d06c5a6caf14e5047e7ab5de70372
-    Flask~=2.0.1
+    Flask ~= 2.0.1
+    Flask-Cors ~= 3.0.10
+    marshmallow ~= 3.13.0
+    marshmallow-enum ~= 1.5.1
+
 
 [options.extras_require]
 dev =
-    black
-    pytest
+    black ~= 21.9b0
+    build ~= 0.7.0
+    pytest ~= 6.2.5
 
 [options.entry_points]
 console_scripts =
-    rui-be = src.rui_be.app:main
+    rui-be = rui_be.app:main
