--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ install_requires =
 dev =
     black ~= 21.9b0
     build ~= 0.7.0
+    gunicorn ~= 20.1.0
     pytest ~= 6.2.5
 
 [options.entry_points]
