--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - run: ssh-add -l
+      - run: echo $SSH_AUTH_SOCK
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
