--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,9 +14,6 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - run: ssh-add -l
-      - run: echo $SSH_AUTH_SOCK
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -31,6 +28,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          ssh: |
+            $SSH_AUTH_SOCK
           tags: |
             xvlcw/rui-be:latest
             xvlcw/rui-be:0
