--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           push: true
           ssh: |
-            $SSH_AUTH_SOCK
+            default=$SSH_AUTH_SOCK
           tags: |
             xvlcw/rui-be:latest
             xvlcw/rui-be:0
