--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: xvlcw
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
@@ -28,8 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          ssh: |
-            default=${{ env.SSH_AUTH_SOCK }}
+          ssh: default
           tags: |
             xvlcw/rui-be:latest
             xvlcw/rui-be:0
