--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+
       - name: Add SSH key for git.ramlimit.de
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: xvlcw
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          ssh: default
+          tags: xvlcw/rui-be:0.9.0-${{ env.GITHUB_REF_SLUG }}
+
+  test_docker:
+    needs: deliver_docker
+    runs-on: ubuntu-20.04
+    steps:
+
+      - name: Inject slug/short variables
+        uses: rlespinasse/github-slug-action@v3.x
+
+      - name: Start backend
+        run: docker run --name rui-be --publish "5000:5000" --detach xvlcw/rui-be:0.9.0-${{ env.GITHUB_REF_SLUG }}
+
+      - name: Wait for server
+        uses: cygnetdigital/wait_for_response@v2.0.0
+        with:
+          url: 'http://localhost:5000/'
