--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
 
-      - name: Start backend and frontend
+      - name: Start backend
         run: docker run --name rui-be --publish "5000:5000" --detach xvlcw/rui-be:0.9.0
 
       - name: Wait for server
@@ -55,7 +55,7 @@ jobs:
       - name: Checkout from GitHub
         uses: actions/checkout@v2
 
-      - name: Start backend and frontend
+      - name: Start backend
         run: docker-compose up --detach
 
       - name: Wait for server
