blackened; flake8 compat

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,13 @@
 name = rui-be
 version = 0.11.0
 
+[flake8]
+# black default
+max-line-length = 89
+# https://github.com/PyCQA/pycodestyle/issues/373
+# https://github.com/psf/black/issues/354
+ignore = E203, W503
+
 [options]
 packages =
     rui_be
@@ -12,7 +19,7 @@ packages =
     rui_be.models.prediction
     rui_be.routes
 install_requires =
-    Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@7736e20e225d06c5a6caf14e5047e7ab5de70372
+    # Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@7736e20e225d06c5a6caf14e5047e7ab5de70372
     Flask ~= 2.0.1
     Flask-Cors ~= 3.0.10
     marshmallow ~= 3.13.0
